add video recorder

--- a/popup.html
+++ b/popup.html
@@ -113,6 +113,61 @@
             </section>
         </div>
     </div>
+    <div style="font-size: 16px; padding-top: 10px; padding-left: 25px; user-select: none">切片录制</div>
+    <div class="host" style="margin: 0px 25px;height: 120px;">
+        <div class="button-host" id="btn9">
+            <span class="tooltip record-manual" style="cursor: pointer;">录制切片
+                <span class="tooltiptext tooltiptext-left record-manual" style="cursor: pointer;">录制直播切片。初次使用时请点此气泡查看使用说明。</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="record">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn10">
+            <span class="tooltip">转码线程
+                <span class="tooltiptext tooltiptext-right">转码时使用的线程数量，线程越多转码越快，但是过多的线程调用会影响系统整体性能。默认：4线程</span>
+            </span>
+            <div class="dropbox">
+                <label for="decodeMT"></label>
+                <select id="decodeMT"></select>
+            </div>
+        </div>
+        <div class="button-host" id="btn11" style="width: 200px">
+            <span class="tooltip">录制重放
+                <span class="tooltiptext tooltiptext-left">录制时会包含开始录制前数分钟的直播内容。该选项需刷新直播间页面后生效。默认：5分钟</span>
+            </span>
+            <div class="dropbox" style="width: 150px;">
+                <label for="prerecord"></label>
+                <select id="prerecord">
+                    <option value="0">0(关闭重放)</option>
+                    <option value="60">1</option>
+                    <option value="300">5</option>
+                    <option value="600">10</option>
+                    <option value="900">15</option>
+                    <option value="1800">30</option>
+                </select>
+                <span style="padding-left: 5px;"> 分钟</span>
+            </div>
+        </div>
+        <div class="button-host" id="btn12">
+            <span class="tooltip">转码质量
+                <span class="tooltiptext tooltiptext-left">转码的预设质量，质量越高画质也好，但是转码时间也会越长。默认：中</span>
+            </span>
+            <div class="dropbox">
+                <label for="preset"></label>
+                <select id="preset">
+                    <option value="ultrafast">低</option>
+                    <option value="superfast">中</option>
+                    <option value="medium">一般</option>
+                    <option value="slow">高</option>
+                    <option value="veryslow">很高</option>
+                </select>
+            </div>
+        </div>
+    </div>
     <div style="font-size: 16px; padding-top: 10px; padding-left: 25px; user-select: none">主站相关</div>
     <div class="host" style="margin: 0px 25px;height: 80px;">
         <div class="button-host" id="btn5">
