--- a/readme.html
+++ b/readme.html
@@ -111,7 +111,7 @@
             </tbody>
         </table>
         <img src="./images/popup/recording.PNG" width="25%" height="25%"><br>
-        <div style="font-size: 12px; width: 100%; text-align: right">*所有性能测试都是在Xeon E5 2969v3上完成的，性能比较拉，仅供参考。</div>
+        <div style="font-size: 12px; width: 100%; text-align: right">*所有性能测试都是在Xeon E5 2969v3上完成的，性能比较拉，仅供参考。视频源与导出均为1080p。</div>
     </div>
 
     <ul>
@@ -136,6 +136,7 @@
     <h3>ver 5.2</h3>
     <ul>
         <li>添加了快速录制直播片段。</li>
+        <li>现在主播下播后还在通知栏中的开播通知会自动清除。</li>
         <li>修复了一些问题。</li>
     </ul>
     <h3>ver 5.1</h3>
