improved performance for recording

--- a/readme.html
+++ b/readme.html
@@ -68,7 +68,12 @@
     rua豹器自5.2.0加入了录制直播切片的功能！<br>
     支持录制重放，这样就不会错过要录制的片段啦！<br>
     录制和转码支持ARM架构CPU(在Apple M1 Max上完成了测试)。<br>
-    目前录制经过验证的最大分辨率为1080p。1440p及以上可以录制但可能会造成性能问题（如丢帧、卡顿）。<br><br>
+    目前录制经过验证的最大分辨率为1080p。1440p及以上可以录制但可能会造成性能问题（如丢帧、卡顿）。<br>
+    <del>
+    由于MediaRecorder API自身限制，似乎最高只能录制30帧视频(也可能是测试机硬件问题)。<br>
+    由于MediaRecorder视频录制机制，某些视频剪辑软件可能无法直接打开视频(测试软件：Adobe Premiere Pro CC 2017，比较老)。所以在录制完成后会先经过转码，转码完成后将自动下载。<br>
+    转码采用FFmpeg wasm。在默认设置(见下图)下一段5分钟的视频大致需要6~7分钟完成转码。<br><br></del>
+    现在视频不再需要转码了，所以导出的所需时间大幅缩短。但是音轨还要转码(因为Pr不支持opus编码)，所以还需要一点时间转码，所需时长大概是录制时长的1/20。<br><br>
     <img src="./images/popup/recordui.png" width="25%" height="25%">
     <ul>
         <li>开始/结束录制：打开切片录制功能后在播放器ui，画质旁边就可以找到开始/结束录制按钮，点击即可进行录制/下载切片。</li>
@@ -76,7 +81,8 @@
     <b style="font-size: 18px">请注意:</b><br>
     目前更改画质，刷新，重连都会倒是已录制但没有尚未转码的内容丢失。<br>
     直播结束时或直播间切断时正在录制的内容也不会被保存。<br>
-    所有测试均是在Google Chrome 版本 97.0.4692.99（正式版本） （64 位）上完成的。火狐浏览器可能支持，但是未经测试。
+    静音的话也是无法录制的。<br>
+    所有测试均是在Google Chrome 版本 97.0.4692.99（正式版本） （64 位）上完成的。<del>火狐浏览器可能支持，但是未经测试。</del>火狐测试过了，不支持。泪目了，明明MeidaRecorder API文档还是Mozilla的写的 (╯°□°）╯︵ ┻━┻
 
     <h2>下载：</h2>
     <a href="https://chrome.google.com/webstore/detail/rua%E8%B1%B9%E5%99%A8/igapngheaefbfhikpbngjgakfnedkchb">chrome插件商店</a><br/>
