improved performance for recording

--- a/readme.html
+++ b/readme.html
@@ -79,14 +79,12 @@
         <li>开始/结束录制：打开切片录制功能后在播放器ui，画质旁边就可以找到开始/结束录制按钮，点击即可进行录制/下载切片。</li>
     </ul>
     <b style="font-size: 18px">请注意:</b><br>
-    目前更改画质，刷新，重连都会倒是已录制但没有尚未转码的内容丢失。<br>
+    目前不支持HEVC<br>
+    目前更改画质，刷新，重连都会使已录制但没有尚未转码的内容丢失。<br>
     直播结束时或直播间切断时正在录制的内容也不会被保存。<br>
     静音的话也是无法录制的。<br>
     所有测试均是在Google Chrome 版本 97.0.4692.99（正式版本） （64 位）上完成的。<del>火狐浏览器可能支持，但是未经测试。</del>火狐测试过了，不支持。泪目了，明明MeidaRecorder API文档还是Mozilla的写的 (╯°□°）╯︵ ┻━┻
 
-    <h2>下载：</h2>
-    <a href="https://chrome.google.com/webstore/detail/rua%E8%B1%B9%E5%99%A8/igapngheaefbfhikpbngjgakfnedkchb">chrome插件商店</a><br/>
-    <a href="https://github.com/TyraelDLee/HarukaEmoji/releases">GitHub</a>
     <br/>
     <h2>版本记录</h2>
     <h3>ver 5.2</h3>
