add up and system emoji

--- a/readme.html
+++ b/readme.html
@@ -89,7 +89,8 @@
     <h2>版本记录</h2>
     <h3>ver 5.2</h3>
     <ul>
-        <li>添加了快速录制直播片段。</li>
+        <li>添加了快速录制直播片段。并提高了导出效率。</li>
+        <li>添加了通用表情及UP大表情的悬浮窗以及全屏下的支持。(支持所有直播间)</li>
         <li>现在主播下播后还在通知栏中的开播通知会自动清除。</li>
         <li>修复了一些问题。</li>
     </ul>
