fixed enter key issue under macOS and other improvements

--- a/popup.html
+++ b/popup.html
@@ -36,7 +36,7 @@
         </div>
         <div class="button-host" id="btn4">
             <span class="tooltip">显示封面
-                <span class="tooltiptext tooltiptext-right">开启后会在通知以大图显示封面<br>默认关闭</span>
+                <span class="tooltiptext tooltiptext-right">开启后会在通知以大图显示封面，仅在Windows系统中可用<br>默认关闭</span>
             </span>
             <section class="button">
                 <div class="checkbox">
