--- a/readme.html
+++ b/readme.html
@@ -16,7 +16,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.3.0来啦 <br>
+        rua豹器5.4.0来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -87,6 +87,13 @@
 
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.4</h3>
+    <ul>
+        <li>添加了视频弹幕下载的功能。</li>
+        <li>禁用了macOS下的推送"显示封面"开关，因为macOS不支持此类推送。</li>
+        <li>修复了macOS中文输入法回车键在直播间悬浮输入框中意外触发弹幕发送的问题。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.3</h3>
     <ul>
         <li>提高了录制直播片段的导出效率。</li>
@@ -179,15 +186,6 @@
     <ul>
         <li>添加了自动签到功能。</li>
         <li>改进了直播间信息API调用，开播推送延迟大幅减少。</li>
-    </ul>
-    <h3>ver 4.4</h3>
-    <ul>
-        <li>修正了弹幕指令的内容。</li>
-    </ul>
-    <h3>ver 4.3</h3>
-    <ul>
-        <li>添加了新的表情包。</li>
-        <li>修正了在活动页面不能正常显示的问题。</li>
     </ul>
 
     <h2>开源组件许可</h2>
