add basic support for dolby atmos download

--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.4.0来啦 <br>
+        rua豹器5.5.0来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -33,10 +33,8 @@
         <li>隐身进入直播间的功能。</li>
         <li>右键关联菜单搜索。识别到AV/BV号时会自动跳转到视频页面，其余的会跳转到b站搜索结果。</li>
         <li>自动打卡有牌子的直播间。</li>
-        <li>主站视频下载，支持单音轨下载<br>
-            注：音轨音质保存是会选择视频提供的最佳音频；默认格式为mp3，如果不能播放请手动将后缀改为mp4。<br>
-            现在支持了在线转码为wav格式，提升了兼容性，可以在扩展设置中启用。但是wav文件较大且开启后文件会先缓存在内存中，因此在下载时间较长的音频时不建议开启。<br>
-            1个小时以上时长的音频不会被保存为wav格式。
+        <li>主站视频下载，支持单音轨及杜比全景声下载<br>
+            注：音轨音质保存是会选择视频提供的最佳音频。<br>
         </li>
         <li>快速录制直播片段 (beta)<br>支持录制重放，默认保留开始录制前5分钟片段，可在设置中设置重放时长</li>
     </ul>
@@ -88,6 +86,11 @@
 
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.5</h3>
+    <ul>
+        <li>现在缓存音频会自动保存为m4a文件，不需要再手动修改文件名了。</li>
+        <li>添加了杜比全景声音频下载的功能。（由于封装问题杜比全景声音频会保存为mp4格式）</li>
+    </ul>
     <h3>ver 5.4</h3>
     <ul>
         <li>添加了视频弹幕下载的功能。</li>
