--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.5.0来啦 <br>
+        rua豹器5.6来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -33,7 +33,7 @@
         <li>隐身进入直播间的功能。</li>
         <li>右键关联菜单搜索。识别到AV/BV号时会自动跳转到视频页面，其余的会跳转到b站搜索结果。</li>
         <li>自动打卡有牌子的直播间。</li>
-        <li>主站视频下载，支持单音轨及杜比全景声下载<br>
+        <li>主站视频下载，支持HDR，单音轨及杜比全景声下载<br>
             注：音轨音质保存是会选择视频提供的最佳音频。<br>
         </li>
         <li>快速录制直播片段 (beta)<br>支持录制重放，默认保留开始录制前5分钟片段，可在设置中设置重放时长</li>
@@ -86,6 +86,11 @@
 
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.6</h3>
+    <ul>
+        <li>现在可以缓存HDR视频了。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.5</h3>
     <ul>
         <li>现在缓存音频会自动保存为m4a文件，不需要再手动修改文件名了。</li>
