--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.6来啦 <br>
+        rua豹器5.7来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -86,6 +86,11 @@
 
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.7</h3>
+    <ul>
+        <li>增加了对"房间专属表情"的支持。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.6</h3>
     <ul>
         <li>现在可以缓存HDR视频了。</li>
