--- a/readme.html
+++ b/readme.html
@@ -37,6 +37,7 @@
             注：音轨音质保存是会选择视频提供的最佳音频。<br>
         </li>
         <li>快速录制直播片段 (beta)<br>支持录制重放，默认保留开始录制前5分钟片段，可在设置中设置重放时长</li>
+        <li>增加了新版UI主页分区隐藏的功能。</li>
     </ul>
     <h2>怎么用</h2>
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
@@ -89,6 +90,7 @@
     <h3>ver 5.7</h3>
     <ul>
         <li>增加了对"房间专属表情"的支持。</li>
+        <li>增加了新版UI主页分区隐藏的功能。</li>
         <li>一些其他改进。</li>
     </ul>
     <h3>ver 5.6</h3>
