--- a/readme.html
+++ b/readme.html
@@ -42,6 +42,11 @@
     <h2>怎么用</h2>
     <p>在b站登录自己的账号后，插件所有功能就会自动运行。</p>
     <div>
+        <h3>主页分区隐藏</h3>
+        <div style="display: flex">
+        <img src="./images/popup/mainPageHiddenCat.PNG" width="70%" height="70%">
+        <div style="margin-top: 20%"><div>在新版UI下的分区中只要点击分区旁边的 <svg width="18px" height="18px" viewBox="0 0 100 100" style="position: relative; top: 3px"><circle cx="50" cy="50" r="50" style="fill:#ff5e57;"/><rect x="25" y="45" rx="5" ry="5" width="50" height="10" style="fill:#fff;opacity:0.9;"/></svg> / <svg width="18px" height="18px" viewBox="0 0 100 100" style="position: relative; top: 3px"><circle cx="50" cy="50" r="50" style="fill:#2bc840;"/><rect x="25" y="45" rx="5" ry="5" width="50" height="10" style="fill:#fff;opacity:0.9;"/><rect x="45" y="25" rx="5" ry="5" width="10" height="50" style="fill:#fff;opacity:0.9;"/></svg> 就可以 <b>隐藏 / 显示</b> 分区啦。</div></div>
+        </div>
         <h3>自定义设置</h3>
         <img src="./images/popup/setting.PNG" width="30%" height="30%">
         <p>单击地址栏右侧插件图标即可打开设置。 目前可以设置的有：</p>
