--- a/readme.html
+++ b/readme.html
@@ -92,6 +92,10 @@
 
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.8</h3>
+    <ul>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.7</h3>
     <ul>
         <li>增加了对"房间专属表情"的支持。</li>
