fixed some display issue

--- a/readme.html
+++ b/readme.html
@@ -94,6 +94,8 @@
     <h2>版本记录</h2>
     <h3>ver 5.8</h3>
     <ul>
+        <li>添加了表情权限显示。</li>
+        <li>修复了弹幕框字数上限显示不正确的问题。</li>
         <li>修复了某些情况下主页分区隐藏不生效的问题。</li>
         <li>一些其他改进。</li>
     </ul>
