--- a/popup.html
+++ b/popup.html
@@ -114,7 +114,7 @@
         </div>
     </div>
     <div style="font-size: 16px; padding-top: 10px; padding-left: 25px; user-select: none">切片录制</div>
-    <div class="host" style="margin: 0px 25px;height: 80px;">
+    <div class="host" style="margin: 0 25px;height: 80px;">
         <div class="button-host" id="btn9">
             <span class="tooltip record-manual" style="cursor: pointer;">录制切片
                 <span class="tooltiptext tooltiptext-left record-manual" style="cursor: pointer;">录制直播切片。初次使用时请点此气泡查看使用说明。</span>
@@ -145,10 +145,10 @@
         </div>
     </div>
     <div style="font-size: 16px; padding-top: 10px; padding-left: 25px; user-select: none">主站相关</div>
-    <div class="host" style="margin: 0px 25px;height: 80px;">
+    <div class="host" style="margin: 0 25px;height: 40px;">
         <div class="button-host" id="btn5">
             <span class="tooltip">B币兑换
-                <span class="tooltiptext tooltiptext-left">自动兑换大会员的每月5B币</span>
+                <span class="tooltiptext tooltiptext-left tooltiptext-top">自动兑换大会员的每月5B币</span>
             </span>
             <section class="button">
                 <div class="checkbox">
@@ -159,22 +159,11 @@
         </div>
         <div class="button-host" id="btn8">
             <span class="tooltip">视频更新
-                <span class="tooltiptext tooltiptext-right">开启后在关注的up主发布新视频时推送通知。</span>
+                <span class="tooltiptext tooltiptext-right tooltiptext-top">开启后在关注的up主发布新视频时推送通知。</span>
             </span>
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="dynamicPush">
-                    <label></label>
-                </div>
-            </section>
-        </div>
-        <div class="button-host" id="wavBtn">
-            <span class="tooltip">音频转码
-                <span class="tooltiptext tooltiptext-left tooltiptext-top">将音频文件转为wav格式保存，提升了兼容性，但是文件较大。开启后文件会先缓存在内存中，因此在下载时间较长的音频时不建议开启。</span>
-            </span>
-            <section class="button">
-                <div class="checkbox">
-                    <input type="checkbox" id="wav">
                     <label></label>
                 </div>
             </section>
