--- a/readme.html
+++ b/readme.html
@@ -58,13 +58,16 @@
             <div>
                 <p>单击地址栏右侧插件图标即可打开设置。 目前可以设置的有：</p>
                 <ul>
-                    <li>开关通知</li>
-                    <li>通知模式（大图/普通）</li>
+                    <li>开播通知</li>
+                    <li>视频更新通知</li>
+                    <li>通知模式（是否显示直播间封面，macOS不支持）</li>
                     <li>开关自动签到</li>
                     <li>开关自动切换粉丝勋章</li>
+                    <li>自动打卡直播间（有勋章的直播间）</li>
                     <li>默认直播画质</li>
-                    <li>大会员B币兑换。</li>
-                    <li>隐身进入直播间的功能。</li>
+                    <li>大会员B币兑换</li>
+                    <li>隐身进入直播间</li>
+                    <li>直播录制</li>
                 </ul>
             </div>
         </div>
@@ -277,4 +280,3 @@
 </div>
 </body>
 </html>
-<!--todo: swap images source-->
