--- a/readme.html
+++ b/readme.html
@@ -47,7 +47,7 @@
         <div class="img-block">
             <img class="img-dark" src="./images/readme/home_dark.png" width="70%" height="70%">
             <img class="img-light" src="./images/readme/home_light.png" width="70%" height="70%">
-            <div>
+            <div class="info-block">
                 <div>在新版UI下的分区中只要点击分区旁边的 <svg width="18px" height="18px" viewBox="0 0 100 100" style="position: relative; top: 3px"><circle cx="50" cy="50" r="50" style="fill:#ff5e57;"/><rect x="25" y="45" rx="5" ry="5" width="50" height="10" style="fill:#fff;opacity:0.9;"/></svg> / <svg width="18px" height="18px" viewBox="0 0 100 100" style="position: relative; top: 3px"><circle cx="50" cy="50" r="50" style="fill:#2bc840;"/><rect x="25" y="45" rx="5" ry="5" width="50" height="10" style="fill:#fff;opacity:0.9;"/><rect x="45" y="25" rx="5" ry="5" width="10" height="50" style="fill:#fff;opacity:0.9;"/></svg> 就可以 <b>隐藏 / 显示</b> 分区啦。</div>
             </div>
         </div>
@@ -55,7 +55,7 @@
         <div class="img-block">
             <img class="img-dark" src="./images/readme/setting_dark.png" width="70%" height="70%">
             <img class="img-light" src="./images/readme/setting_light.png" width="70%" height="70%">
-            <div>
+            <div class="info-block">
                 <p>单击地址栏右侧插件图标即可打开设置。 目前可以设置的有：</p>
                 <ul>
                     <li>开播通知</li>
@@ -75,13 +75,13 @@
         <div class="img-block">
             <img class="img-dark" src="./images/readme/liveroom_dark.png" width="70%" height="70%">
             <img class="img-light" src="./images/readme/liveroom_light.png" width="70%" height="70%">
-            <div><p>默认会出现在这个位置，你也可以把它拖拽到你喜欢的位置。</p></div>
+            <div class="info-block"><p>默认会出现在这个位置，你也可以把它拖拽到你喜欢的位置。</p></div>
         </div>
         <h3>视频页悬浮球</h3>
         <div class="img-block">
             <img class="img-dark" src="./images/readme/video_dark.png" width="70%" height="70%">
             <img class="img-light" src="./images/readme/video_light.png" width="70%" height="70%">
-            <div>
+            <div class="info-block">
                 <p>单击地址栏右侧插件图标即可打开设置。 目前支持的功能的有：</p>
                 <ul>
                     <li>视频信息</li>
