add enhanced hidden entry function

--- a/popup.html
+++ b/popup.html
@@ -45,24 +45,24 @@
                 </div>
             </section>
         </div>
-        <div class="button-host" id="btn2">
-            <span class="tooltip">翻牌子
-                <span class="tooltiptext tooltiptext-left">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子。只要牌子戴得对，我就是单推人！</span>
-            </span>
-            <section class="button">
-                <div class="checkbox">
-                    <input type="checkbox" id="medal">
-                    <label></label>
-                </div>
-            </section>
-        </div>
         <div class="button-host" id="HiddenEntryBtn">
             <span class="tooltip">隐身进入
-                <span class="tooltiptext tooltiptext-right">隐身进入直播间，此模式只是不在弹幕中显示进入直播间，但是高能榜依然会照常显示</span>
+                <span class="tooltiptext tooltiptext-left">隐身进入直播间，此模式只是不在弹幕中显示进入直播间，但是高能榜依然会照常显示</span>
             </span>
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="HiddenEntry">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn10">
+            <span class="tooltip">强力隐身
+                <span class="tooltiptext tooltiptext-right">增强型隐身，此模式下没有人能看到你进入直播间，但是页面弹幕框不能发弹幕，rua豹器弹幕框不受影响</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="enhanced-hidden">
                     <label></label>
                 </div>
             </section>
@@ -112,13 +112,13 @@
                 </div>
             </section>
         </div>
-        <div class="button-host" id="btn10">
-            <span class="tooltip">强力隐身
-                <span class="tooltiptext tooltiptext-left">增强型隐身，此模式下没有人能看到你进入直播间，但是页面弹幕框不能发弹幕，rua豹器弹幕框不受影响</span>
+        <div class="button-host" id="btn2">
+            <span class="tooltip">翻牌子
+                <span class="tooltiptext tooltiptext-left">开启后在不同直播间切换时会确保佩戴当前主播粉丝牌子。只要牌子戴得对，我就是单推人！</span>
             </span>
             <section class="button">
                 <div class="checkbox">
-                    <input type="checkbox" id="enhanced-hidden">
+                    <input type="checkbox" id="medal">
                     <label></label>
                 </div>
             </section>
