--- a/readme.html
+++ b/readme.html
@@ -66,7 +66,7 @@
                     <li>自动打卡直播间（有勋章的直播间）</li>
                     <li>默认直播画质</li>
                     <li>大会员B币兑换</li>
-                    <li>隐身进入直播间</li>
+                    <li>隐身进入直播间/增强隐身</li>
                     <li>直播录制</li>
                 </ul>
             </div>
@@ -127,6 +127,7 @@
     <h2>版本记录</h2>
     <h3>ver 5.8</h3>
     <ul>
+        <li>添加了增强隐身的功能。</li>
         <li>添加了音乐播放器页面的音乐下载，下载质量为当前音乐提供的最佳音质，格式为flac或m4a。(虽然不知道有什么用)</li>
         <li>添加了表情权限显示。</li>
         <li>修复了弹幕框字数上限显示不正确的问题。</li>
