--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.8来啦 <br>
+        rua豹器5.9来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
@@ -125,6 +125,12 @@
 
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.9</h3>
+    <ul>
+        <li>现在音频缓存会自动根据视频信息填入元数据（作者，标题，年份等）。</li>
+        <li>修复了音频页面下载按钮显示不正确的问题。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.8</h3>
     <ul>
         <li>添加了增强隐身的功能。</li>
