--- a/readme.html
+++ b/readme.html
@@ -21,6 +21,14 @@
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
+    <h3 style="font-size: 28px">ver 5.9 特性：</h3>
+    <ul>
+        <li>现在音频缓存会自动根据视频信息填入元数据（作者，标题，年份等）。</li>
+        <li>添加了直播间当弹幕发送被吞时的提示。</li>
+        <li>修复了音频页面下载按钮显示不正确的问题。</li>
+        <li>修复了强力隐身模式下主站显示未登陆的问题。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h2>已有的功能</h2>
     <ul>
         <li>视频投稿推送通知。</li>
@@ -128,7 +136,9 @@
     <h3>ver 5.9</h3>
     <ul>
         <li>现在音频缓存会自动根据视频信息填入元数据（作者，标题，年份等）。</li>
+        <li>添加了直播间当弹幕发送被吞时的提示。</li>
         <li>修复了音频页面下载按钮显示不正确的问题。</li>
+        <li>修复了强力隐身模式下主站显示未登陆的问题。</li>
         <li>一些其他改进。</li>
     </ul>
     <h3>ver 5.8</h3>
