--- a/readme.html
+++ b/readme.html
@@ -137,6 +137,7 @@
     <ul>
         <li>现在音频缓存会自动根据视频信息填入元数据（作者，标题，年份等）。</li>
         <li>添加了直播间当弹幕发送被吞时的提示。</li>
+        <li>现在养牌子打卡每日刷新由0点改为了8点。</li>
         <li>修复了音频页面下载按钮显示不正确的问题。</li>
         <li>修复了强力隐身模式下主站显示未登陆的问题。</li>
         <li>一些其他改进。</li>
