swaped api, add message notification

--- a/popup.html
+++ b/popup.html
@@ -159,7 +159,7 @@
     <div class="host" style="margin: 0 25px;height: 40px;">
         <div class="button-host" id="btn5">
             <span class="tooltip">B币兑换
-                <span class="tooltiptext tooltiptext-left tooltiptext-top">自动兑换大会员的每月5B币</span>
+                <span class="tooltiptext tooltiptext-left">自动兑换大会员的每月5B币</span>
             </span>
             <section class="button">
                 <div class="checkbox">
@@ -170,11 +170,22 @@
         </div>
         <div class="button-host" id="btn8">
             <span class="tooltip">视频更新
-                <span class="tooltiptext tooltiptext-right tooltiptext-top">开启后在关注的up主发布新视频时推送通知。</span>
+                <span class="tooltiptext tooltiptext-right">开启后在关注的up主发布新视频时推送通知。</span>
             </span>
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="dynamicPush">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn12">
+            <span class="tooltip">消息推送
+                <span class="tooltiptext tooltiptext-left tooltiptext-top">开启后在收到回复、赞、@、系统消息、私信时会推送通知。</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="unreadSwitch">
                     <label></label>
                 </div>
             </section>
