--- a/readme.html
+++ b/readme.html
@@ -17,17 +17,14 @@
     <h1>rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.9来啦 <br>
+        rua豹器5.10来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px">ver 5.9 特性：</h3>
+    <h3 style="font-size: 28px">ver 5.10 特性：</h3>
     <ul>
-        <li>现在音频缓存会自动根据视频、音频信息填入元数据（作者，标题，年份，歌词等）。</li>
-        <li>添加了直播间当弹幕发送被吞时的提示。</li>
-        <li>现在养牌子打卡每日刷新由0点改为了8点。</li>
-        <li>修复了音频页面下载按钮显示不正确的问题。</li>
-        <li>修复了强力隐身模式下主站显示未登陆的问题。</li>
+        <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
+        <li>更改了开播查询API，现在推送延迟更小了。</li>
         <li>一些其他改进。</li>
     </ul>
     <h2>已有的功能</h2>
