add dynamic notification

--- a/popup.html
+++ b/popup.html
@@ -190,6 +190,17 @@
                 </div>
             </section>
         </div>
+        <div class="button-host" id="btn13">
+            <span class="tooltip">动态推送
+                <span class="tooltiptext tooltiptext-right tooltiptext-top">开启后在关注的人发动态时会推送通知。（如果关注人数太多的当心系统通知栏爆炸）</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="dynamicSwitch">
+                    <label></label>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
 <div class="bottom">
