embed ffmpeg to content scripts to fit mv3 and firefox

--- a/readme.html
+++ b/readme.html
@@ -24,6 +24,7 @@
     <h3 style="font-size: 28px">ver 5.10 特性：</h3>
     <ul>
         <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
+        <li>加入了新动态推送的功能。</li>
         <li>更改了开播查询API，现在推送延迟更小了。</li>
         <li>一些其他改进。</li>
     </ul>
@@ -131,6 +132,13 @@
 
     <br/>
     <h2>版本记录</h2>
+    <h3>ver 5.10</h3>
+    <ul>
+        <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
+        <li>加入了新动态推送的功能。</li>
+        <li>更改了开播查询API，现在推送延迟更小了。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.9</h3>
     <ul>
         <li>现在音频缓存会自动根据视频、音频信息填入元数据（作者，标题，年份，歌词等）。</li>
