--- a/readme.html
+++ b/readme.html
@@ -23,6 +23,7 @@
     </p>
     <h3 style="font-size: 28px">ver 5.10 特性：</h3>
     <ul>
+        <li>现在可以缓存8k的视频了。</li>
         <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
         <li>加入了新动态推送的功能。</li>
         <li>更改了开播查询API，现在推送延迟更小了。</li>
@@ -40,8 +41,8 @@
         <li>隐身进入直播间的功能。</li>
         <li>右键关联菜单搜索。识别到AV/BV号时会自动跳转到视频页面，其余的会跳转到b站搜索结果。</li>
         <li>自动打卡有牌子的直播间。</li>
-        <li>主站视频下载，支持HDR，单音轨及杜比全景声下载<br>
-            注：音轨音质保存是会选择视频提供的最佳音频。<br>
+        <li>主站视频下载，支持HDR、8K，单音轨及杜比全景声下载<br>
+            注：音轨音质保存默认会选择视频提供的最佳音频。<br>
         </li>
         <li>快速录制直播片段 (beta)<br>支持录制重放，默认保留开始录制前5分钟片段，可在设置中设置重放时长</li>
         <li>增加了新版UI主页分区隐藏的功能。</li>
@@ -134,6 +135,7 @@
     <h2>版本记录</h2>
     <h3>ver 5.10</h3>
     <ul>
+        <li>现在可以缓存8k的视频了。</li>
         <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
         <li>加入了新动态推送的功能。</li>
         <li>更改了开播查询API，现在推送延迟更小了。</li>
