new checkin suit for 23 May rule, fixed file name issue for mv3 download

--- a/readme.html
+++ b/readme.html
@@ -95,12 +95,12 @@
                     <li>视频信息</li>
                     <li>弹幕查询</li>
                     <li>弹幕下载（ass格式）</li>
-                    <li>弹幕下载强度，与页面内弹幕云屏蔽设置一致，强度下载的越低弹幕越少</li>
+                    <li>弹幕下载强度，与页面内弹幕云屏蔽设置一致，强度越低下载到的弹幕越少</li>
                     <li>视频下载：</li>
                     <ul>
-                        <li>最高支持HDR，高于1080p的清晰度需要大会员</li>
-                        <li>HDR视频会保存为mkv，其他质量的会保存为原视频文件格式</li>
-                        <li>支持单音频下载</li>
+                        <li>支持HDR、8k、4k，高于1080p的清晰度需要大会员</li>
+                        <li>HDR、8k、4k视频会保存为mkv，其他质量的会保存为原视频文件格式</li>
+                        <li>支持单音频下载，音频会保存为m4a格式，杜比全景声会保存为mp4格式。</li>
                     </ul>
                 </ul>
             </div>
