--- a/readme.html
+++ b/readme.html
@@ -27,6 +27,7 @@
         <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
         <li>加入了新动态推送的功能。</li>
         <li>更改了开播查询API，现在推送延迟更小了。</li>
+        <li>添加了对超大文件的下载支持，但是由于FFmpeg wasm的限制将无法合并视频音频，遇到大文件时将保留为两个mp4文件（一个视频，一个音轨），参见<a href="https://github.com/ffmpegwasm/ffmpeg.wasm#what-is-the-maximum-size-of-input-file" target="_blank">FFmpeg.wasm文档</a></li>
         <li>一些其他改进。</li>
     </ul>
     <h2>已有的功能</h2>
@@ -101,6 +102,7 @@
                         <li>支持HDR、8k、4k，高于1080p的清晰度需要大会员</li>
                         <li>HDR、8k、4k视频会保存为mkv，其他质量的会保存为原视频文件格式</li>
                         <li>支持单音频下载，音频会保存为m4a格式，杜比全景声会保存为mp4格式。</li>
+                        <li>当HDR、8k、4k文件大于2GB时将分开视频、音频保存为两个mp4文件</li>
                     </ul>
                 </ul>
             </div>
@@ -139,6 +141,7 @@
         <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
         <li>加入了新动态推送的功能。</li>
         <li>更改了开播查询API，现在推送延迟更小了。</li>
+        <li>添加了对超大文件的下载支持，但是由于FFmpeg wasm的限制将无法合并视频音频，遇到大容量dash协议媒体流（HDR、8k、4k）时将保留为两个mp4文件（一个视频，一个音轨），flv文件不受影响，参见<a href="https://github.com/ffmpegwasm/ffmpeg.wasm#what-is-the-maximum-size-of-input-file" target="_blank">FFmpeg.wasm文档</a></li>
         <li>一些其他改进。</li>
     </ul>
     <h3>ver 5.9</h3>
