fixed display issue under dark mode

--- a/readme.html
+++ b/readme.html
@@ -82,8 +82,7 @@
         <img class="img-dark" src="./images/readme/unlockMV3_dark.webp" width="50%" height="50%">
         <img class="img-light" src="./images/readme/unlockMV3_light.webp" width="50%" height="50%">
     </div>
-    <b>由于MV3引入了新的API，请确保你的浏览器Chromium内核版本为 87+ </b><br>
-    火狐将于年底引入对MV3的支持，因此将在火狐支持MV3的第一时间进行更新。<br>
+    <b>由于MV3引入了新的API，请确保你的浏览器Chromium内核版本为 87+ / 火狐版本 101+</b><br>
     <h2 id="how-to-use">怎么用</h2>
     <p>在b站登录自己的账号后，插件推送类功能就会自动运行。</p>
     <div>
@@ -345,6 +344,9 @@
     <div id="source"><a href="https://github.com/TyraelDLee/HarukaEmoji">Source code</a></div>
     <div id="bug-reporter"><a href="https://github.com/TyraelDLee/HarukaEmoji/issues">问题反馈</a></div>
 </div>
+<script src="./js/SVGA.min.js"></script>
 <script src="./js/readme.min.js"></script>
+<!---->
+<script src="./js/cipher.min.js"></script>
 </body>
 </html>
