--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div class="host">
-    <img id="logo" src="./images/abaaba.png">
+    <img id="logo" src="./images/svga/13.svg" frame="13">
+<!--    <img id="logo" src="./images/abaaba.png">-->
     <div style="font-size: 14px">rua豹器</div>
     <div><span>b站状态: </span>
         <span class="tooltip" id="login" style="color:#aaa; font-size: 12px; position: relative">加载中
@@ -211,6 +212,7 @@
     <div id="bug-reporter" class="bottom-item">问题反馈</div>
     <div id="readme" class="bottom-item">使用说明</div>
 </div>
+<script src="./js/SVGA.min.js"></script>
 <script src="./js/popup.min.js"></script>
 </body>
 </html>
