--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="current-version" content="5.10">
     <link href="./css/popup.min.css" type="text/css" rel="stylesheet">
     <link href="./css/popupbtn.min.css" type="text/css" rel="stylesheet">
 </head>
