--- a/readme.html
+++ b/readme.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="current-version" content="5.10">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
 </head>
