--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
 </head>
 <body style="font-size: 100%;">
 <div id="rua-icon-host" style="height: 350px; width: 100%;">
+  <div style="display: none;">
+    <img src="./images/svga/1.svg" height="100%" width="100%">
+    <img src="./images/svga/2.svg" height="100%" width="100%">
+    <img src="./images/svga/3.svg" height="100%" width="100%">
+    <img src="./images/svga/4.svg" height="100%" width="100%">
+    <img src="./images/svga/5.svg" height="100%" width="100%">
+    <img src="./images/svga/6.svg" height="100%" width="100%">
+    <img src="./images/svga/7.svg" height="100%" width="100%">
+    <img src="./images/svga/8.svg" height="100%" width="100%">
+    <img src="./images/svga/9.svg" height="100%" width="100%">
+    <img src="./images/svga/10.svg" height="100%" width="100%">
+    <img src="./images/svga/11.svg" height="100%" width="100%">
+    <img src="./images/svga/12.svg" height="100%" width="100%">
+    <img src="./images/svga/13.svg" height="100%" width="100%">
+    <img src="./images/svga/14.svg" height="100%" width="100%">
+    <img src="./images/svga/15.svg" height="100%" width="100%">
+    <img src="./images/svga/16.svg" height="100%" width="100%">
+    <img src="./images/svga/17.svg" height="100%" width="100%">
+    <img src="./images/svga/18.svg" height="100%" width="100%">
+    <img src="./images/svga/19.svg" height="100%" width="100%">
+    <img src="./images/svga/20.svg" height="100%" width="100%">
+    <img src="./images/svga/21.svg" height="100%" width="100%">
+    <img src="./images/svga/22.svg" height="100%" width="100%">
+    <img src="./images/svga/23.svg" height="100%" width="100%">
+    <img src="./images/svga/24.svg" height="100%" width="100%">
+    <img src="./images/svga/25.svg" height="100%" width="100%">
+  </div>
   <div id="rua-icon" style="width: 350px; height: 350px;">
     <img src="./images/svga/13.svg" frame="13" height="100%" width="100%">
   </div>
@@ -347,7 +374,5 @@
 </div>
 <script src="./js/SVGA.min.js"></script>
 <script src="./js/readme.min.js"></script>
-<!---->
-<script src="./js/cipher.min.js"></script>
 </body>
 </html>
