fixed pages bug

--- a/Tetris.html
+++ b/Tetris.html
@@ -7,6 +7,7 @@
     <link href="./css/Tetris.min.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+    <div style="display: none"><img src="images/svga/13.svg"></div>
     <main></main>
     <script src="./js/SVGA.min.js"></script>
     <script src="./js/Tetris.js"></script>
