fixed pages bug

--- a/Tetris.html
+++ b/Tetris.html
@@ -10,6 +10,6 @@
     <div style="display: none"><img src="images/svga/13.svg"></div>
     <main></main>
     <script src="./js/SVGA.min.js"></script>
-    <script src="./js/Tetris.js"></script>
+    <script src="./js/Tetris.min.js"></script>
 </body>
 </html>
