--- a/readme.html
+++ b/readme.html
@@ -30,10 +30,12 @@
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.10 特性：</h3>
     <ul>
+        <li>悬浮球现在支持番剧页面了，可以下载番剧了。</li>
         <li>现在可以缓存8k的视频了。</li>
         <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
         <li>加入了新动态推送的功能。</li>
         <li>更改了开播查询API，现在推送延迟更小了。</li>
+        <li>更改了下载方式（但是现在在文件完成下载前请不要关掉页面，不用担心文件是以流的方式直接写入硬盘的不会占用内存），修复了文件名突然变成一串数字的问题。</li>
         <li>添加了对超大文件的下载支持，但是由于FFmpeg wasm的限制将无法合并视频音频，遇到大容量dash协议媒体流（HDR、8k、4k）时将保留为两个mp4文件（一个视频，一个音轨），flv文件不受影响，参见<a href="https://github.com/ffmpegwasm/ffmpeg.wasm#what-is-the-maximum-size-of-input-file" target="_blank">FFmpeg.wasm文档</a></li>
         <li>现已转为MV3应用。</li>
         <li>一些其他改进。</li>
@@ -137,7 +139,9 @@
                         <li>支持HDR、8k、4k，高于1080p的清晰度需要大会员</li>
                         <li>HDR、8k、4k视频会保存为mkv，其他质量的会保存为原视频文件格式</li>
                         <li>支持单音频下载，音频会保存为m4a格式，杜比全景声会保存为mp4格式。</li>
-                        <li>当HDR、8k、4k文件大于2GB时将分开视频、音频保存为两个mp4文件</li>
+                        <li>当HDR、8k、4k文件大于2GB时将分开视频、音频保存为两个mp4文件。</li>
+                        <li>现在文件名不会再突然变成一串数字了。</li>
+                        <li>由于现在b站媒体源需要来源认证（视频页发起请求），所以现在视频的取流和缓存过程要在视频页完成。也就是说下载完成前不能关闭视频页（挂着就行），但是不用担心文件是以流的方式直接写入硬盘的不会占用内存。</li>
                     </ul>
                 </ul>
             </div>
@@ -172,11 +176,13 @@
     <h2 id="version">版本记录</h2>
     <h3>ver 5.10</h3>
     <ul>
+        <li>悬浮球现在支持番剧页面了，可以下载番剧了。</li>
         <li>现在可以缓存8k的视频了。</li>
         <li>加入了消息推送的功能 (包括@、赞、回复、私信、系统通知)。</li>
         <li>加入了新动态推送的功能。</li>
         <li>更改了开播查询API，现在推送延迟更小了。</li>
         <li>添加了对超大文件的下载支持，但是由于FFmpeg wasm的限制将无法合并视频音频，遇到大容量dash协议媒体流（HDR、8k、4k）时将保留为两个mp4文件（一个视频，一个音轨），flv文件不受影响，参见<a href="https://github.com/ffmpegwasm/ffmpeg.wasm#what-is-the-maximum-size-of-input-file" target="_blank">FFmpeg.wasm文档</a></li>
+        <li>更改了下载方式（但是现在在文件完成下载前请不要关掉页面，不用担心文件是以流的方式直接写入硬盘的不会占用内存），修复了文件名突然变成一串数字的问题。</li>
         <li>现已转为MV3应用。</li>
         <li>一些其他改进。</li>
     </ul>
