--- a/readme.html
+++ b/readme.html
@@ -123,7 +123,7 @@
             <img class="img-light" src="./images/readme/liveroom_light.webp" width="70%" height="70%">
             <div class="info-block"><p>默认会出现在这个位置，你也可以把它拖拽到你喜欢的位置。</p></div>
         </div>
-        <h3>视频页悬浮球</h3>
+        <h3>视频/番剧页悬浮球</h3>
         <div class="img-block">
             <img class="img-dark" src="./images/readme/video_dark.webp" width="70%" height="70%">
             <img class="img-light" src="./images/readme/video_light.webp" width="70%" height="70%">
