add cancel and timeline jump-to features

--- a/readme.html
+++ b/readme.html
@@ -131,7 +131,7 @@
                 <p>单击地址栏右侧插件图标即可打开设置。 目前支持的功能的有：</p>
                 <ul>
                     <li>视频信息</li>
-                    <li>弹幕查询</li>
+                    <li>弹幕查询 / 点击左侧时间可空降到对应时间</li>
                     <li>弹幕下载（ass格式）</li>
                     <li>弹幕下载强度，与页面内弹幕云屏蔽设置一致，强度越低下载到的弹幕越少</li>
                     <li>视频下载：</li>
