--- a/setting.html
+++ b/setting.html
@@ -56,6 +56,7 @@
         </div>
     </div>
 </div>
+<div id="loading" style="display: flex; width: 100%;justify-content: center;height: 60px"><span style="line-height: 60px;text-align: center;">加载中...</span></div>
 <div id="bottom">
     <h2></h2>
     <div style="cursor: auto"><svg height="16" width="16" viewBox="0 0 16 16" version="1.1">
